--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -24,14 +24,17 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
-    "@typegoose/typegoose": "^10.1.1",
+    "@typegoose/typegoose": "^9.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.4",
     "dotenv": "^16.0.3",
+    "kindagoose": "^1.2.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
